@@ -10,9 +10,17 @@ Where "NUMBER" is the bug number.
  2.6.1 - dd/mmm/2006
 ----------------------------------------------------------------------
 
- - Updated translations (ko, pa).
- - Added support for log rotation based on time/date.
+ - Updated translations (de, fi, gl, hu, ko, pa, sq).
+ - Fixed building of xchat-text (although not recommended!).
+ - Added support for log rotation based on time or date.
  - Double-click in tree layout will now expand/collapse (Khisanth).
+ - Keys to move tabs around now work in Tree layout too (Khisanth/Me).
+ - Largely re-written "Search Text" function with much better
+   behaviour and match case on/off and search backwards options 
+   (Richard Hitt and Me).
+ - Parent tab color (Khisanth).
+ - Fixed crash when trying to Detach or Close a utility tab via
+   right-click, when it's not the currently focused tab.
  - 
  - 
 
